--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon ./src",
+    "test": "jest --watch",
     "docker": "npm run docker:build && npm run docker:start",
     "docker:build": "docker build --rm -t cullenjett/node-api-playground .",
-    "docker:start": "docker run --rm -it -p 3000:3000 -v $(pwd)/src:/node-api-playground/src/ cullenjett/node-api-playground"
+    "docker:start":
+      "docker run --rm -it -p 3000:3000 -v $(pwd)/src:/node-api-playground/src/ cullenjett/node-api-playground"
   },
   "keywords": [],
   "author": "",
@@ -25,5 +27,12 @@
     "body-parser": "^1.18.2",
     "express": "^4.16.3",
     "morgan": "^1.9.0"
+  },
+  "jest": {
+    "transform": {
+      "^.+\\.tsx?$": "ts-jest"
+    },
+    "testRegex": "(/__tests__/.*|(\\.|/)(test|spec))\\.(jsx?|tsx?)$",
+    "moduleFileExtensions": ["ts", "js"]
   }
 }
