--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
   "name": "typescript-express-playground",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
-    "start": "nodemon ./src",
+    "start": "ts-node ./src/index.ts",
     "test": "jest --watch",
+    "build": "tsc",
     "docker": "npm run docker:build && npm run docker:start",
     "docker:build":
       "docker build --rm -t cullenjett/typescript-express-playground .",
@@ -15,19 +16,22 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "devDependencies": {
-    "@types/express": "^4.11.1",
-    "@types/node": "^9.6.1",
-    "nodemon": "^1.17.3",
-    "prettier": "^1.11.1",
-    "ts-node": "^5.0.1",
-    "tslint": "^5.9.1",
-    "typescript": "^2.8.1"
-  },
   "dependencies": {
     "body-parser": "^1.18.2",
     "express": "^4.16.3",
     "morgan": "^1.9.0"
+  },
+  "devDependencies": {
+    "@types/express": "^4.11.1",
+    "@types/jest": "^22.2.2",
+    "@types/node": "^9.6.1",
+    "chokidar": "^2.0.3",
+    "jest": "^22.4.3",
+    "prettier": "^1.11.1",
+    "ts-jest": "^22.4.2",
+    "ts-node": "^5.0.1",
+    "tslint": "^5.9.1",
+    "typescript": "^2.8.1"
   },
   "private": true,
   "jest": {
