--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,9 @@
     "target": "es6",
     "module": "commonjs",
     "outDir": "./dist",
-    "lib": ["es2015"]
-  }
+    "lib": ["es2015"],
+    "typeRoots": ["node_modules/@types"]
+  },
+  "include": ["src/**/*"],
+  "exclude": ["node_modules", "**/*.(spec|test).ts"]
 }
