--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "main": "dist/index.js",
   "scripts": {
     "start": "ts-node ./src/index.ts",
+    "start:docker": "docker-compose up --build",
+    "start:prod": "node dist/index.js",
     "test": "jest --watch",
     "build": "tsc",
     "docker": "npm run docker:build && npm run docker:start",
@@ -19,6 +21,7 @@
   "dependencies": {
     "body-parser": "^1.18.2",
     "express": "^4.16.3",
+    "monk": "^6.0.5",
     "morgan": "^1.9.0"
   },
   "devDependencies": {
